[gd_scene load_steps=12 format=3 uid="uid://c1ev2a3y3ioh3"]

[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_fg4tc"]
[ext_resource type="PackedScene" uid="uid://dplamgro23jn7" path="res://scenes/skill_choice.tscn" id="2_j84uq"]
[ext_resource type="Script" path="res://scripts/close_timer.gd" id="3_nlbi8"]
[ext_resource type="Script" path="res://scripts/skill_pool.gd" id="4_x3ggk"]
[ext_resource type="Script" path="res://scripts/skill.gd" id="5_tih3g"]
[ext_resource type="Resource" uid="uid://bi60ixssutee4" path="res://resources/damage_up.tres" id="6_d1lxb"]
[ext_resource type="Resource" uid="uid://bt0aso68n0mup" path="res://resources/health_up.tres" id="8_sg8j4"]
[ext_resource type="Resource" uid="uid://f585g6yu0iec" path="res://resources/size_up.tres" id="8_uahjj"]

[sub_resource type="Animation" id="Animation_u5qhu"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WinScreenCanvas/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WinScreenCanvas/Control:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 0), Vector2(320, 1080)]
}

[sub_resource type="Animation" id="Animation_66awu"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WinScreenCanvas/ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1080), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WinScreenCanvas/Control:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, -1080), Vector2(320, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_42ehx"]
_data = {
"close": SubResource("Animation_u5qhu"),
"open": SubResource("Animation_66awu")
}

[node name="WinScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fg4tc")
skill_choice_scene = ExtResource("2_j84uq")

[node name="WinScreenCanvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="WinScreenCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1080.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.752941, 0.568627, 1)

[node name="Control" type="Control" parent="WinScreenCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 1080.0
offset_right = -312.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinText" type="RichTextLabel" parent="WinScreenCanvas/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.298137
anchor_top = 0.0592593
anchor_right = 0.701863
anchor_bottom = 0.185185
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center]NICE![/center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="IntermediateText" type="RichTextLabel" parent="WinScreenCanvas/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.149068
anchor_top = 0.288889
anchor_right = 0.84472
anchor_bottom = 0.414815
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]SELECT A SKILL
TO CONTINUE[/center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="SkillChoose" type="Control" parent="WinScreenCanvas/Control"]
layout_mode = 1
anchor_top = 0.481481
anchor_right = 1.0
anchor_bottom = 0.896296
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Skills" type="HBoxContainer" parent="WinScreenCanvas/Control/SkillChoose"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0178571
anchor_right = 0.993789
anchor_bottom = 0.982143
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
script = ExtResource("3_nlbi8")

[node name="SkillPool" type="Node" parent="."]
script = ExtResource("4_x3ggk")

[node name="Damage+" type="Node" parent="SkillPool"]
script = ExtResource("5_tih3g")
skill = ExtResource("6_d1lxb")

[node name="Health+" type="Node" parent="SkillPool"]
script = ExtResource("5_tih3g")
skill = ExtResource("8_sg8j4")

[node name="Size+" type="Node" parent="SkillPool"]
script = ExtResource("5_tih3g")
skill = ExtResource("8_uahjj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_42ehx")
}

[connection signal="timeout" from="OpenTimer" to="." method="_on_open_timer_timeout"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_close_timer_timeout"]
